--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
             <li><strong>Outlook:</strong> Suscribirse desde la web</li>
           </ol>
           <div class="calendar-url">
-            https://ekadasi-calendar.blitzkriegfc.workers.dev/calendar.ics?tz=America/Mexico_City
+            https://api.ekadasi.bhaktilatam.com/calendar.ics?tz=America/Mexico_City
           </div>
         </div>
       </div>
@@ -401,7 +401,7 @@
   </a>
 
   <script>
-    const API_BASE = 'https://ekadasi-calendar.blitzkriegfc.workers.dev';
+    const API_BASE = 'https://api.ekadasi.bhaktilatam.com';
 
     function downloadCalendar() {
       const tz = document.getElementById('city').value;
