Agregar sección de reglas de ayuno en español

--- a/index.html
+++ b/index.html
@@ -293,6 +293,82 @@
       border-bottom-color: var(--color-warm);
     }
 
+    /* Fasting Rules */
+    .fasting-rules {
+      background: white;
+      border-radius: 12px;
+      padding: 40px;
+      margin-bottom: 50px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.06);
+      border: 1px solid rgba(26, 95, 90, 0.08);
+    }
+
+    .fasting-rules h2 {
+      font-family: var(--font-serif);
+      font-size: 1.8rem;
+      color: var(--color-primary);
+      margin-bottom: 25px;
+      padding-bottom: 15px;
+      border-bottom: 2px solid var(--color-warm);
+      text-align: center;
+    }
+
+    .fasting-rules h3 {
+      font-family: var(--font-serif);
+      font-size: 1.3rem;
+      color: var(--color-primary);
+      margin: 30px 0 15px;
+      padding-bottom: 8px;
+      border-bottom: 1px solid var(--color-warm);
+    }
+
+    .fasting-rules h4 {
+      font-size: 0.95rem;
+      font-weight: 700;
+      color: var(--color-secondary);
+      margin: 20px 0 10px;
+    }
+
+    .fasting-rules p {
+      color: var(--color-text-light);
+      margin-bottom: 15px;
+      font-size: 0.95rem;
+      line-height: 1.7;
+    }
+
+    .fasting-rules .intro {
+      font-style: italic;
+      background: var(--color-cream);
+      padding: 15px 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+    }
+
+    .fasting-rules ul {
+      margin: 10px 0 15px 20px;
+      color: var(--color-text-light);
+      font-size: 0.9rem;
+    }
+
+    .fasting-rules ul li {
+      margin: 8px 0;
+      line-height: 1.6;
+    }
+
+    .fasting-rules strong {
+      color: var(--color-text);
+    }
+
+    .fasting-rules .warning {
+      color: #8b4513;
+      font-weight: 600;
+    }
+
+    @media (max-width: 768px) {
+      .fasting-rules { padding: 25px 20px; }
+      .fasting-rules h2 { font-size: 1.5rem; }
+    }
+
     /* GitHub icon */
     .github-link {
       position: fixed;
@@ -378,6 +454,70 @@
         </div>
       </div>
     </div>
+
+    <section class="fasting-rules">
+      <h2>Reglas de Ayuno</h2>
+
+      <div class="intro">
+        <p>Si has observado un ayuno completo (sin siquiera agua), no necesitas romperlo con granos. Puedes romperlo con caraṇāmṛta o fruta. Pero si has observado Ekādaśī comiendo fruta, vegetales, etc., entonces debes romperlo al día siguiente tomando granos en los horarios indicados.</p>
+        <p><strong>Mahā-dvādaśī se observa igual que Ekādaśī.</strong></p>
+      </div>
+
+      <h3>Ekādaśī</h3>
+      <p>La esencia es comer de manera simple, una o dos veces, para poder dedicar el mayor tiempo posible a escuchar, cantar y recordar a Śrī Śrī Rādhā-Kṛṣṇa. <span class="warning">Nunca comas carne, pescado, huevos, cebolla, ajo, zanahoria, lentejas rojas (masūr-dal), lentejas verdes planas, hongos ni productos derivados de estos.</span></p>
+
+      <h4>Alimentos restringidos en Ekādaśī:</h4>
+      <ul>
+        <li>Tomates, berenjenas, coliflor, brócoli, pimientos, betabel, melón amargo (karela), loki, parmal, toroi, kunli, drumsticks, okra (bindī) y flores de plátano, rábano, calabaza, aceitunas</li>
+        <li>Chícharos, garbanzos y todo tipo de leguminosas, incluyendo productos hechos de leguminosas (ej. papadams, tofu, tempeh)</li>
+        <li>Todos los vegetales de hoja (ej. espinaca, lechugas, coles) y hierbas de hoja como perejil, hojas de cilantro, apio y hojas de curry</li>
+        <li>Granos (ej. mijo, cebada, sémola, pasta, arroz, maíz) y todo tipo de harinas hechas de granos y leguminosas (ej. harina de arroz, harina de garbanzo, harina de urad dahl)</li>
+        <li>Almidones de maíz o granos, y productos hechos o mezclados con estos almidones como bicarbonato, polvo para hornear, ciertas bebidas gaseosas con jarabe de maíz, natillas, ciertos yogures y pudines, ciertas variedades de crema y requesón, ciertos dulces y caramelos, y bolitas de tapioca</li>
+        <li>Aceites hechos de granos (ej. aceite de maíz, aceite de mostaza, aceite de sésamo) y productos fritos en estos aceites (ej. nueces fritas, papas fritas y otros snacks fritos)</li>
+        <li>Miel y dulces hechos con almidones</li>
+      </ul>
+
+      <h4>Especias permitidas en Ekādaśī:</h4>
+      <ul>
+        <li>Solo pimienta negra en grano (moler personalmente) y sal pura de un paquete nuevo y limpio</li>
+      </ul>
+
+      <h4>Especias NO permitidas en Ekādaśī:</h4>
+      <ul>
+        <li>Hing (asafétida), semillas de sésamo, comino, fenogreco, mostaza, tamarindo, hinojo, cardamomo, nuez moscada, jengibre y cúrcuma (fresca o no)</li>
+      </ul>
+
+      <h4>Alimentos permitidos todos los días del año, incluyendo Ekādaśī y Cāturmāsya:</h4>
+      <ul>
+        <li>Todas las frutas frescas, todas las nueces y todos los aceites hechos de nueces si son puros</li>
+        <li>Papas, calabaza, pepino, limón, aguacate, coco, trigo sarraceno, todos los azúcares</li>
+        <li>Todos los productos lácteos puros (excepto yogur durante el 2do mes de Cāturmāsya y leche durante el 3er mes)</li>
+        <li>Para sannyāsīs, brahmacārīs y vānaprasthas: rasurar la cabeza y cortar las uñas debe hacerse en días de luna llena</li>
+      </ul>
+
+      <h3>Cāturmāsya</h3>
+
+      <h4>Alimentos restringidos durante los cuatro meses de Cāturmāsya:</h4>
+      <ul>
+        <li>Berenjenas, tomates, loki, parmal, urad dahl y miel</li>
+      </ul>
+
+      <h4>Alimentos particulares restringidos durante cada uno de los cuatro meses:</h4>
+      <ul>
+        <li><strong>Primer mes:</strong> Sin vegetales de hoja, como espinaca, todo tipo de lechugas, todo tipo de coles, kale, hierbas de hoja como cilantro, menta, perejil, curry y hierbas en polvo y tés</li>
+        <li><strong>Segundo mes:</strong> Sin yogur (si se requiere por salud, puede mezclarse con agua)</li>
+        <li><strong>Tercer mes:</strong> Sin leche (si se requiere, puede mezclarse con una gota de jugo de limón)</li>
+        <li><strong>Cuarto mes:</strong> Sin aceite de mostaza ni semillas de sésamo</li>
+      </ul>
+
+      <h3>Puruṣottama Māsa</h3>
+
+      <h4>Alimentos restringidos durante el mes de Puruṣottama:</h4>
+      <ul>
+        <li>Berenjenas, tomates, loki, parmal, urad dahl, miel, aceite de mostaza o semillas de sésamo</li>
+        <li>Sin rasurar para brahmacārīs y sannyāsīs</li>
+      </ul>
+    </section>
 
     <div class="source-links">
       <a href="https://www.purebhakti.com/resources/vaisnava-calendar" target="_blank">Pure Bhakti</a>
